<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="124dp"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/overfit"
            android:contentDescription="@string/logo" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/clear"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/white" />

        <TextView
            android:id="@+id/choseActivityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/escolha_seu_treino"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:fontFamily="@font/source_sans_pro_black_italic" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/activityImage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/activity_image_1"
                    app:srcCompat="@mipmap/ic_launcher" />

                <LinearLayout
                    android:id="@+id/activityLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="280dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/activityName1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activityName1"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            app:fontFamily="@font/source_sans_pro_black_italic"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/xpText1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginEnd="15dp"
                                android:layout_gravity="end"
                                android:text="@string/xp1"
                                android:textColor="@color/white"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/intensityText1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/intensity1"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/startButton1"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="end"
                        android:background="@drawable/play"
                        android:backgroundTint="@color/Yellow"
                        android:contentDescription="@string/start_button_1" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/activityImage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/activity_image_2"
                    app:srcCompat="@mipmap/ic_launcher" />

                <LinearLayout
                    android:id="@+id/activityLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="280dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/activityName2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activityName2"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:fontFamily="@font/source_sans_pro_black_italic"
                            android:textSize="30sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/xpText2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="15dp"
                                android:layout_marginRight="15dp"
                                android:text="@string/xp2"
                                android:textColor="@color/white"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/intensityText2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/intensity2"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/startButton2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="end"
                        android:background="@drawable/play"
                        android:backgroundTint="@color/Yellow"
                        android:contentDescription="@string/start_button_1" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/activityImage3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/activity_image_3"
                    app:srcCompat="@mipmap/ic_launcher" />

                <LinearLayout
                    android:id="@+id/activityLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="280dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/activityName3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activityName3"
                            android:textColor="@color/white"
                            app:fontFamily="@font/source_sans_pro_black_italic"
                            android:textStyle="bold"
                            android:textSize="30sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/xpText3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="15dp"
                                android:layout_marginRight="15dp"
                                android:text="@string/xp3"
                                android:textColor="@color/white"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/intensityText3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/intensity3"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/startButton3"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="end"
                        android:background="@drawable/play"
                        android:backgroundTint="@color/Yellow"
                        android:contentDescription="@string/start_button_1" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/activityImage4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/activity_image_4"
                    app:srcCompat="@mipmap/ic_launcher" />

                <LinearLayout
                    android:id="@+id/activityLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="280dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/activityName4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/activityName4"
                            android:textColor="@color/white"
                            app:fontFamily="@font/source_sans_pro_black_italic"
                            android:textStyle="bold"
                            android:textSize="30sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/xpText4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="15dp"
                                android:text="@string/xp4"
                                android:textColor="@color/white"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/intensityText4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/intensity4"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/startButton4"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="end"
                        android:background="@drawable/play"
                        android:backgroundTint="@color/Yellow"
                        android:contentDescription="@string/start_button_1" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>