<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GraphActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/overfit"
                android:contentDescription="@string/logo" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="350dp"
                android:layout_height="90dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/runningasset"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="163dp"
                    android:layout_height="69dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/dias_seguidos_de_treino"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:fontFamily="@font/source_sans_pro_black_italic" />

                <TextView
                    android:id="@+id/streak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/_08"
                    android:textColor="@color/Yellow"
                    android:textSize="60sp"
                    app:fontFamily="@font/source_sans_pro_black_italic" />

            </androidx.appcompat.widget.Toolbar>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/imcText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:textSize="15sp"
                android:gravity="start"
                android:text="@string/imc" />

            <TextView
                android:id="@+id/imcValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="50dp"
                android:textSize="15sp"
                android:gravity="start"
                android:text="" />

            <TextView
                android:id="@+id/maxXpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:textSize="15sp"
                android:gravity="end"
                android:text="@string/xp_maximo" />

            <TextView
                android:id="@+id/maxXpValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:layout_marginEnd="50dp"
                android:gravity="start"
                android:text="" />

            <TextView
                android:id="@+id/totalXpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="end"
                android:text="XP total: " />

            <TextView
                android:id="@+id/totalXPValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="start"
                android:text="" />
        </LinearLayout>

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="300dip"
            android:layout_marginTop="25dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:buttonGravity="bottom">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="40dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/treinoButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bar"
                    android:backgroundTint="@android:color/darker_gray"
                    android:contentDescription="@string/meus_treinos" />

                <TextView
                    android:id="@+id/meusTreinos2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:contentDescription="@string/meus_treinos"
                    android:text="@string/treino"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20sp"
                    android:visibility="visible"
                    app:fontFamily="@font/source_sans_pro_black_italic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/graficoButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@drawable/trending"
                    android:backgroundTint="@color/colorPrimary"
                    android:contentDescription="@string/graficos" />

                <TextView
                    android:id="@+id/meusTreinos3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/meus_treinos"
                    android:text="@string/progresso"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:visibility="visible"
                    app:fontFamily="@font/source_sans_pro_black_italic" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>